--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -1,4 +1,9 @@
 {
+  "log": {
+    "access": "/var/log/v2ray_access.log",
+    "error": "/var/log/v2ray_error.log",
+    "loglevel": "warning"
+  },
   "inbounds": [{
     "port": 10086,
     "protocol": "vmess",
