--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -1,18 +1,37 @@
 {
   "log": {
-    "access": "/var/log/v2ray_access.log",
-    "error": "/var/log/v2ray_error.log",
-    "loglevel": "warning"
+    "loglevel": "warning",
+    "access": "/var/log/v2ray/access.log",
+    "error": "/var/log/v2ray/error.log"
   },
   "inbounds": [{
-    "port": 10086,
+    "port": 31826,
     "protocol": "vmess",
     "settings": {
-      "clients": [{ "id": "60ca58e9-003e-4c01-98de-c2223ae49153" }]
+      "clients": [
+        {
+          "id": "8ba2c468-f1a1-43cc-b754-871f999b83a8",
+          "level": 1,
+          "alterId": 64
+        }
+      ]
     }
   }],
   "outbounds": [{
     "protocol": "freedom",
     "settings": {}
-  }]
+  },{
+    "protocol": "blackhole",
+    "settings": {},
+    "tag": "blocked"
+  }],
+  "routing": {
+    "rules": [
+      {
+        "type": "field",
+        "ip": ["geoip:private"],
+        "outboundTag": "blocked"
+      }
+    ]
+  }
 }
