--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
   v2ray:
     image: v2fly/v2fly-core
     restart: always
-    hostname: v2ray
-    container_name: v2ray
+    hostname: v2fly
+    container_name: v2fly
     ports:
-      - "80:80"
-      - "443:443"
+      - "10086:10086"
     volumes:
       - ./v2ray/config.json:/etc/v2ray/config.json
