--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.1'
 
 services:
-  v2ray:
+  v2fly:
     image: v2fly/v2fly-core
     restart: always
-    hostname: v2fly
+    network_mode: "bridge"
     container_name: v2fly
     ports:
       - "10086:10086"
