--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -22,7 +22,8 @@
   ],
   "outbounds": [
     {
-      "protocol": "freedom"
+      "protocol": "freedom",
+      "settings": {}
     }
   ],
   "transport": {
