--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -4,9 +4,21 @@
     "access": "/var/log/v2ray/access.log",
     "error": "/var/log/v2ray/error.log"
   },
+  "routing": {
+    "domainStrategy": "AsIs",
+    "rules": [
+      {
+        "type": "field",
+        "protocol": [
+          "bittorrent"
+        ],
+        "outboundTag": "blocked"
+      }
+    ]
+  },
   "inbounds": [
     {
-      "port": 10086,
+      "port": 10000,
       "protocol": "vmess",
       "settings": {
         "clients": [
@@ -16,7 +28,43 @@
         ]
       },
       "streamSettings": {
-        "network": "kcp"
+        "network": "ws",
+        "wsSettings": {
+          "path": "/ray"
+        }
+      },
+      "sniffing": {
+        "enabled": true,
+        "destOverride": [
+          "http",
+          "tls"
+        ]
+      }
+    },
+    {
+      "port": 10001,
+      "protocol": "vmess",
+      "settings": {
+        "clients": [
+          {
+            "id": "b831381d-6324-4d53-ad4f-8cda48b30811"
+          }
+        ]
+      },
+      "streamSettings": {
+        "network": "kcp",
+        "kcpSettings": {
+          "mtu": 1350,
+          "tti": 10,
+          "uplinkCapacity": 200,
+          "downlinkCapacity": 200,
+          "congestion": false,
+          "readBufferSize": 2,
+          "writeBufferSize": 2,
+          "header": {
+            "type": "none"
+          }
+        }
       }
     }
   ],
@@ -24,20 +72,11 @@
     {
       "protocol": "freedom",
       "settings": {}
+    },
+    {
+      "protocol": "blackhole",
+      "settings": {},
+      "tag": "blocked"
     }
-  ],
-  "transport": {
-    "kcpSettings": {
-      "mtu": 1350,
-      "tti": 20,
-      "uplinkCapacity": 5,
-      "downlinkCapacity": 100,
-      "congestion": true,
-      "readBufferSize": 2,
-      "writeBufferSize": 2,
-      "header": {
-        "type": "none"
-      }
-    }
-  }
+  ]
 }
