--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -1,8 +1,8 @@
 {
   "log": {
-    "loglevel": "warning",
     "access": "/var/log/v2ray/access.log",
-    "error": "/var/log/v2ray/error.log"
+    "error": "/var/log/v2ray/error.log",
+    "loglevel": "warning"
   },
   "routing": {
     "domainStrategy": "AsIs",
@@ -26,12 +26,6 @@
             "id": "b831381d-6324-4d53-ad4f-8cda48b30811"
           }
         ]
-      },
-      "streamSettings": {
-        "network": "ws",
-        "wsSettings": {
-          "path": "/ray"
-        }
       },
       "sniffing": {
         "enabled": true,
@@ -65,6 +59,53 @@
             "type": "none"
           }
         }
+      },
+      "sniffing": {
+        "enabled": true,
+        "destOverride": [
+          "http",
+          "tls"
+        ]
+      }
+    },
+    {
+      "port": 10002,
+      "protocol": "vmess",
+      "settings": {
+        "clients": [
+          {
+            "id": "b831381d-6324-4d53-ad4f-8cda48b30811"
+          }
+        ]
+      },
+      "streamSettings": {
+        "network": "ws",
+        "wsSettings": {
+          "path": "/ray"
+        }
+      },
+      "sniffing": {
+        "enabled": true,
+        "destOverride": [
+          "http",
+          "tls"
+        ]
+      }
+    },
+    {
+      "port": 20000,
+      "protocol": "shadowsocks",
+      "settings": {
+        "method": "chacha20-poly1305",
+        "password": "IamAGoodMan",
+        "network": "tcp,udp"
+      },
+      "sniffing": {
+        "enabled": true,
+        "destOverride": [
+          "http",
+          "tls"
+        ]
       }
     }
   ],
