--- a/kcptun/config.json
+++ b/kcptun/config.json
@@ -1,12 +1,12 @@
 {
-  "listen": ":4001",
-  "target": "127.0.0.1:20000",
-  "key": "KcptunPassword",
+  "listen": ":4000",
+  "target": "127.0.0.1:10000",
+  "key": "HelloKcptun!",
   "crypt": "aes-128",
   "mode": "fast3",
   "mtu": 1400,
-  "sndwnd": 5120,
-  "rcvwnd": 5120,
+  "sndwnd": 4096,
+  "rcvwnd": 4096,
   "datashard": 30,
   "parityshard": 15,
   "dscp": 46,
